# acsi-engine

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
acsi/: __init__.py  __main__.py  baseline.py  cli.py  config.py  monitor.py  overrides.py  patch.py  preflight.py  publish.py  review.py  sampling.py  schemas.py  scrub.py  stats.py
acsi/capture/: __init__.py  python.py  typescript.md
acsi/cert/: __init__.py  build.py  render.py
acsi/diff/: __init__.py  assertions.py  clustering.py  deterministic.py  semantic.py
acsi/importers/: __init__.py  common.py  jsonl.py  langfuse.py  supabase.py
acsi/judge/: __init__.py  calibration.py  clients.py  ensemble.py  rubric.py  runner.py
acsi/replay/: __init__.py  artifacts.py  clients.py  litellm_env.py  params.py  routing.py  runner.py  store.py
benchmarks/oss-issues/: README.md  acsi.yaml  system_prompt.txt
benchmarks/oss-issues-patched/: README.md  acsi.yaml  fabrication.txt  summary.schema.json  system_prompt.txt
scripts/: build_oss_issue_corpus.py  generate_benchmark_traces.py  generate_fixtures.py
templates/: alpine.min.js  report.html.j2
tests/: test_assertions.py  test_baseline.py  test_benchmark_corpus_builder.py  test_benchmark_trace_generator.py  test_cert_build.py  test_cert_render.py  test_cli.py  test_cluster_cli.py  test_clustering.py  test_demo.py  test_diff_deterministic.py  test_diff_semantic.py  test_fail_closed.py  test_fixtures.py  test_import_jsonl.py  test_import_supabase.py  test_judge_cli.py  test_judge_clients.py  test_judge_ensemble.py  test_judge_hardening.py  test_judge_rubric.py  test_judge_runner.py  test_live_run.py  test_m5_acceptance.py  test_m6_acceptance.py  test_m6_reopened_acceptance.py  test_m7_monitor.py  test_m7_review.py  test_patch.py  test_preflight.py  test_publish.py  test_rebuild_cert.py  test_replay_cli.py  test_replay_clients.py  test_replay_params.py  test_replay_runner.py  test_replay_store.py  test_routing.py  test_run_resume.py  test_sampling.py  (+4 more)
tests/fixtures/: invalid.jsonl  synthetic_traces.jsonl
