[project]
name = "acsi"
version = "0.2.0"
description = "Certify an LLM model swap against your real traffic and issue a signed PASS/BLOCK certificate."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "ACSI contributors" }]
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.7.0",
  "litellm>=1.40.0",
  "httpx>=0.27.0",
  "rich>=13.7.0",
  "numpy>=1.26.0",
  "scipy>=1.12.0",
  "scikit-learn>=1.4.0",
  "sentence-transformers>=3.0.0",
  "jinja2>=3.1.0",
  "jsonschema>=4.26.0",
  "cryptography>=42.0.0",
]

[project.optional-dependencies]
scrub = ["presidio-analyzer>=2.2.354"]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[project.scripts]
acsi = "acsi.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
